--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   connectivity_plus: ^6.0.3
   lottie: ^3.1.0 # OR RIVE
   dio: ^5.4.0
+  pin_code_fields: ^8.0.1
 
   # Icons
   iconsax: ^0.0.8
