--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -13,8 +13,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter 
+    
 
-     # Utility Packages
+  # Utility Packages
   http: ^1.2.1
   intl: ^0.19.0
   logger: ^2.2.0
@@ -55,6 +58,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  intl_translation: ^0.20.1
   flutter_lints: ^4.0.0
 
 flutter:
