--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   cached_network_image: ^3.4.1
   jwt_decoder: ^2.0.1
   universal_html: ^2.2.4
+  http_parser: ^4.1.2
   
   
   #--------------- ./ PACKAGES END ------------------#
