--- a/frontend/android/.gitignore
+++ b/frontend/android/.gitignore
@@ -9,7 +9,7 @@ GeneratedPluginRegistrant.java
 # Remember to never publicly share your keystore.
 # See https://flutter.dev/to/reference-keystore
 key.properties
-**/*.keystore
+# **/*.keystore
 **/*.jks
 
 # Bỏ qua thư mục node_modules
