--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   flutter_facebook_auth: ^7.1.1
   country_code_picker: ^3.2.0
   platform: ^3.1.6
+  flutter_launcher_icons: ^0.14.3
   
   
   #--------------- ./ PACKAGES END ------------------#
@@ -71,6 +72,17 @@ dev_dependencies:
 
   intl_translation: ^0.20.1
   flutter_lints: ^4.0.0
+
+flutter_native_splash:
+  color: "#00A2FF" # Màu nền xanh
+  image: assets/logos/studymate_logo.png
+  android: true
+  ios: true
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logos/studymate_icon.png"
 
 flutter:
 
@@ -83,6 +95,8 @@ flutter:
     - assets/onboarding1.png
     - assets/onboarding2.png
     - assets/onboarding3.png
+    - assets/logos/studymate_logo.png
+    - assets/logos/studymate_icon.png
 
     - assets/logos/
     - assets/icons/brands/
