--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -90,6 +90,7 @@ flutter:
     - assets/images/animations/
     - assets/icons/payment_methods/
     - assets/images/on_boarding_images/
+    - assets/doc/
 
 
    #--------------- LOCAL FONTS ------------------#
