--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   country_code_picker: ^3.2.0
   platform: ^3.1.6
   flutter_launcher_icons: ^0.14.3
+  audioplayers: ^5.2.1
   
   
   #--------------- ./ PACKAGES END ------------------#
