--- a/frontend/android/app/src/main/AndroidManifest.xml
+++ b/frontend/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
         android:enableOnBackInvokedCallback="true"
-        android:label="flutter_elearning_project"
+        android:label="StudyMate"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
